--- a/p.tex
+++ b/p.tex
@@ -7,12 +7,13 @@
 \usepackage{mathtools}
 \usepackage{unicode-math}
 \usepackage{pgfpages}
+\usepackage{comment}
 
 \setbeameroption{show notes on second screen}
 
-\title{Material Design theme \\manual}
+\title{Eventually Consistent Transactions}
 \date{\today}
-\author[Šubert]{Eduard Šubert}
+\author{Jan Bajer\\Adam Pioterek}
 
 \usetheme{material}
 
@@ -27,6 +28,36 @@
 \titlepage{}
 \note{Hello!}
 \end{frame}
+
+\section{Jan}
+
+\begin{frame}{Opis problemów wg wstępu z Cloud Types}
+\end{frame}
+
+\begin{frame}{Definicje Sequential, Eventual, Revision Consistency}
+\end{frame}
+
+\begin{frame}{Revision Graphs, porównanie rewizji i transakcji}
+\end{frame}
+
+\begin{frame}{Historie?}
+\end{frame}
+
+\section{Adam}
+
+\begin{frame}{Cloud Types}
+\end{frame}
+
+\begin{frame}{Przedstawienie app. z 2. art., kod}
+\end{frame}
+
+\begin{frame}{Yield w rev. diagrams}
+\end{frame}
+
+\begin{frame}{Storage Consistency z 2.5}
+\end{frame}
+
+\begin{comment}
 
 \section{Intro}
 
@@ -59,5 +90,7 @@
     \end{card}
     \note{Wow! Unicode works}
 \end{frame}
+
+\end{comment}
 
 \end{document}
