no cloud -- sticker by FSF

--- a/p.tex
+++ b/p.tex
@@ -11,6 +11,7 @@
 \usepackage{listings}
 \usepackage[polish]{babel}
 \usepackage{amsmath}
+\usepackage{textcomp}
 
 % \setbeameroption{show notes on second screen}
 
@@ -83,7 +84,7 @@
 		\onslide<3-> {
 			\begin{figure}
 				\centering
-				\includegraphics[width=.5\textwidth]{no_cloud.png}
+                \includegraphics[width=.4\textwidth]{thereisnocloud.pdf}
 			\end{figure}
 		}
 	\end{card}
@@ -371,6 +372,15 @@ function NaiveReserve(seat: Seat, customer: String) {
             \item ten przykład nie reprezentuje aplikacji, do których ten model się nadaje,
             \item wręcz przeciwnie --- do aplikacji wymagających częstych i silnych synchronizacji bardziej nadaje się tradycyjne podejście do transakcji.
         \end{itemize}
+    \end{card}
+\end{frame}
+
+\begin{frame}
+    \begin{card}
+        {\LARGE Dziękujemy za uwagę}
+    \end{card}
+    \begin{card}
+        \textit{There is no cloud --- only other people's computers} \textcopyleft~FSF, CC-BY-SA 4.0
     \end{card}
 \end{frame}
 
